[tool.poetry]
name = "docteng"
version = "0.1.0"
description = "Document Templating Engine - A flexible Jinja2-based document and newsletter renderer"
authors = ["Suresh <suresh.koppisetti@gmail.com>"]
readme = "README.md"
packages = [{include = "docteng"}]
homepage = "https://github.com/yourusername/docteng"
repository = "https://github.com/yourusername/docteng"
keywords = ["templating", "document", "newsletter", "jinja2", "rendering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
docteng = "docteng.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
